--- a/index.html
+++ b/index.html
@@ -2,11 +2,179 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>Nerds studio</title>
+  
   </head>
   <body>
+<header>
+  <a  href="#">
+    <img src="https://via.placeholder.com/159.87x65.02" alt="Логотип интернет магазина «Nerds»">
+        </a>
+  <!-- Шапка сайта -->
+  <nav>
+  <ul>
+    <li><a>СТУДИЯ</a></li>
+    <li><a href="#">КЛИЕНТЫ</a></li>
+    <li><a href="./catalog.html">МАГАЗИН</a></li>
+    <li><a href="#">КОНТАКТЫ</a></li>  
+    <li><a href="#">КОРЗИНА</a></li>
+</ul>
+  </nav>
+</header>
+  <main>
+     <!-- Основное содержимое страницы -->
+ <h1>Интернет магазин «Nerds»</h1>
+ <!-- Слайдер -->
+ <section>
+   <h2>Преимущества</h2>
+   <div>
+    <label for="slide-1">Первый</label>
+    <input type="radio" id="slide-1" name="slider" checked>
+    <label for="slide-2">Второй</label>
+    <input type="radio" id="slide-2" name="slider">
+    <label for="slide-3">Третий</label>
+    <input type="radio" id="slide-3" name="slider">
+  </div>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<ul>
+  <li>
+  <h3>Долго, дорого
+    скрупулезно.</h3>
+  <p>Математически выверенный дизайн
+  для вашего сайта или мобильного приложения.</p>
+  <a href="#">Узнать больше</a>
+</li>
+ 
+<li>
+  <h3>Любим математику
+   как никто другой.</h3>
+   <p>Никакого креатива, только математические формулы
+  для расчета идеальных пропорций.</p>
+  <a href="#">Узнать больше</a>
+</li>
 
+<li>
+  <h3>Только ночь,
+  только хардкор</h3>
+  <p>Работать днем, как все? Мы против этого.
+  Ближе к полуночи работа только начинается.</p>
+  <a href="#">Узнать больше</a>
+</li>
+</ul>
+  </section>
+  <section>
+    <h2>Услуги</h2>
+    <ul>
+<li><img src="https://via.placeholder.com/300x146" alt="Веб-сайты">
+  <h3>Веб сайты</h3>
+<p>Мир никогда не будет прежним<br>
+  после того как увидит ваш сайт!</p></li>
+  <a href="#">Заказать</a>
+<li><img src="https://via.placeholder.com/300x146" alt="Приложения">
+  <h3>Приложения</h3>
+<p>Покорите топ-10 приложений<br>
+  в AppStore и Google Play</p></li>
+  <a href="#">Заказать</a>
+<li><img src="https://via.placeholder.com/300x146" alt="Презентации">
+  <h3>Презентации</h3>
+<p>Вы даже не подозреваете,<br>
+  насколько вы изумительны!</p></li>
+  <a href="#">Заказать</a>
+  </section>
+  
+  <section>
+    <div>
+    <h2>О нас</h2>
+    <p>Мы — маленькая, но гордая
+      дизайн-студия из Краснодара.</p>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+        превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <h3>Выполняем заказы на разработку:</h3>
+        <ul>
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li> Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+        </div>
+        <div>
+        <img src="https://via.placeholder.com/360x208" alt="brightnerds">
+        <h3>с 2004 года Любим точность во всем:</h3>
+        </div>
+      <div>
+          <ul>
+            <li><h4>146<sup>%</sup></h4></li>
+            <li><h4>100<sup>%</sup></h4></li>
+            <li><h4>50<sup>%</sup></h4></li>
+          </ul>
+          <ul>
+            <li>Уровень самоотдачи</li>
+            <li>Соблюдение сроков</li>
+            <li>Минимальная предоплата</li>
+          </ul>
+       
+      </div>
+        </section>
+        <section>
+            <h2>Клиенты</h2>
+            <ul>
+              <li>
+                <a href="https://htmlacademy.ru/intensive/htmlcss">
+                  <img src="https://via.placeholder.com/199x68" alt="html academy">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="https://via.placeholder.com/209x87" alt="Borodinski">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="https://via.placeholder.com/185x52" alt="Pink">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="https://via.placeholder.com/173x84" alt="Mishka">
+                </a>
+              </li>
+            </ul>
+          </section>
+        </div>
+      </main>
+</main>
+<footer>
+  <!-- Подвал сайта -->
+  <section>
+   <h2>Контакты</h2>
+  <h3>NЁRDS DESIGN STUDIO</h3>
+<p>191186, Санкт-Петербург,<br>
+  ул. Б. Конюшенная, д. 19/8<br>
+  тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
+  <button type="button">напишите нам</button>
+<img src="https://via.placeholder.com/231x190" alt=map-marker">
+
+<section>
+  <h2>Мы в соцсетях</h2>
+   <ul>
+    <li>
+      <a href="#">Вконтакте</a>
+    </li>
+    <li>
+      <a href="#">Фейсбук</a>
+    </li>
+    <li>
+      <a href="#">Инстаграм</a>
+    </li>
+  </ul>
+</section>
+
+<section>
+
+<h2>«Давайте дружить, это выгодно!» </h2>
+</p>Скидка 10% для друзей из социальных сетей.<p>
+
+</section>
+
+</footer>
   </body>
 </html>
