--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Nerds studio</title>
-  
   </head>
   <body>
 <header>
@@ -22,19 +21,11 @@
   </nav>
 </header>
   <main>
-     <!-- Основное содержимое страницы -->
+    <!-- Основное содержимое страницы -->
  <h1>Интернет магазин «Nerds»</h1>
  <!-- Слайдер -->
  <section>
    <h2>Преимущества</h2>
-   <div>
-    <label for="slide-1">Первый</label>
-    <input type="radio" id="slide-1" name="slider" checked>
-    <label for="slide-2">Второй</label>
-    <input type="radio" id="slide-2" name="slider">
-    <label for="slide-3">Третий</label>
-    <input type="radio" id="slide-3" name="slider">
-  </div>
 
 <ul>
   <li>
@@ -44,7 +35,7 @@
   для вашего сайта или мобильного приложения.</p>
   <a href="#">Узнать больше</a>
 </li>
- 
+<img src="https://via.placeholder.com/1157x431" alt="Слайд-1">
 <li>
   <h3>Любим математику
    как никто другой.</h3>
@@ -52,7 +43,7 @@
   для расчета идеальных пропорций.</p>
   <a href="#">Узнать больше</a>
 </li>
-
+<img src="https://via.placeholder.com/1157x431" alt="Слайд-2">
 <li>
   <h3>Только ночь,
   только хардкор</h3>
@@ -60,33 +51,46 @@
   Ближе к полуночи работа только начинается.</p>
   <a href="#">Узнать больше</a>
 </li>
+<img src="https://via.placeholder.com/1157x431" alt="Слайд-3">
 </ul>
+<div>
+  <button type="button">Первый слайд</button>
+  <button type="button">Второй слайд</button>
+  <button type="button">Третий слайд</button>
+</div>
   </section>
   <section>
     <h2>Услуги</h2>
     <ul>
-<li><img src="https://via.placeholder.com/300x146" alt="Веб-сайты">
+<li>
   <h3>Веб сайты</h3>
 <p>Мир никогда не будет прежним<br>
-  после того как увидит ваш сайт!</p></li>
+  после того как увидит ваш сайт!</p>
   <a href="#">Заказать</a>
-<li><img src="https://via.placeholder.com/300x146" alt="Приложения">
+</li>
+  <img src="https://via.placeholder.com/300x146" alt="Веб-сайты">
+<li>
   <h3>Приложения</h3>
 <p>Покорите топ-10 приложений<br>
-  в AppStore и Google Play</p></li>
+  в AppStore и Google Play</p>
   <a href="#">Заказать</a>
-<li><img src="https://via.placeholder.com/300x146" alt="Презентации">
+</li>
+  <img src="https://via.placeholder.com/300x146" alt="Приложения">
+<li>
   <h3>Презентации</h3>
 <p>Вы даже не подозреваете,<br>
-  насколько вы изумительны!</p></li>
+  насколько вы изумительны!</p>
   <a href="#">Заказать</a>
+</li>
+  <img src="https://via.placeholder.com/300x146" alt="Презентации">
+  </ul>
   </section>
   
   <section>
-    <div>
     <h2>О нас</h2>
-    <p>Мы — маленькая, но гордая
-      дизайн-студия из Краснодара.</p>
+    <div>
+    <p><strong>Мы — маленькая, но гордая
+      дизайн-студия из Краснодара.</strong></p>
       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
         превыше креатива. Работаем не покладая рук, как роботы.</p>
         <h3>Выполняем заказы на разработку:</h3>
@@ -99,20 +103,18 @@
         <div>
         <img src="https://via.placeholder.com/360x208" alt="brightnerds">
         <h3>с 2004 года Любим точность во всем:</h3>
+          <ul>
+            <li><h4>146<sup>%</sup></h4>
+             <p>Уровень самоотдачи</p>
+            </li>
+            <li><h4>100<sup>%</sup></h4>
+              <p>Соблюдение сроков</p>
+            </li>
+            <li><h4>50<sup>%</sup></h4>
+            <p>Минимальная предоплата</p>
+            </li>
+          </ul>
         </div>
-      <div>
-          <ul>
-            <li><h4>146<sup>%</sup></h4></li>
-            <li><h4>100<sup>%</sup></h4></li>
-            <li><h4>50<sup>%</sup></h4></li>
-          </ul>
-          <ul>
-            <li>Уровень самоотдачи</li>
-            <li>Соблюдение сроков</li>
-            <li>Минимальная предоплата</li>
-          </ul>
-       
-      </div>
         </section>
         <section>
             <h2>Клиенты</h2>
@@ -139,9 +141,7 @@
               </li>
             </ul>
           </section>
-        </div>
       </main>
-</main>
 <footer>
   <!-- Подвал сайта -->
   <section>
@@ -152,7 +152,7 @@
   тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
   <button type="button">напишите нам</button>
 <img src="https://via.placeholder.com/231x190" alt=map-marker">
-
+</section>
 <section>
   <h2>Мы в соцсетях</h2>
    <ul>
@@ -171,7 +171,7 @@
 <section>
 
 <h2>«Давайте дружить, это выгодно!» </h2>
-</p>Скидка 10% для друзей из социальных сетей.<p>
+<p>Скидка 10% для друзей из социальных сетей.</p>
 
 </section>
 
