--- a/catalog.html
+++ b/catalog.html
@@ -25,14 +25,14 @@
      <h1>Магазин готовых шаблонов</h1>
     <section>
       <h2>Фильтр товаров</h2>
-      <form method="get" action="https://echo.htmlacademy.ru"></form>
+      <form method="get" action="https://echo.htmlacademy.ru">
       <fieldset>
         <legend>Стоимость:</legend>
             <input type="range" name="price"
                    min="0" max="15000">
             <label for="min">от <input name="min-price" id="min" type="text" value="0">
               </label>
-            <label for="max">до <input name="max-price" id="max"type="text" value="15000">
+            <label for="max">до <input name="max-price" id="max" type="text" value="15000">
               </label>
             </fieldset>
 
@@ -86,7 +86,7 @@
     <section>
       <h2>Список шаблонов</h2>
         <div>
-         <form method="get" action="https://echo.htmlacademy.ru"></form>
+         <form method="get" action="https://echo.htmlacademy.ru">
           <fieldset>
             <legend>Сортировать:</legend>
              <label for="filter-price">по цене</label>
@@ -99,14 +99,14 @@
 
          <fieldset>
           <label for="to-min-price">по убыванию</label>
-          <input type="radio" name="product-sort" value="min-p" id="to-min-price"checked>
+          <input type="radio" name="product-sort" value="min-p" id="to-min-price" checked>
           
           <label for="to-max-price">по возрастанию</label>
           <input type="radio" name="product-sort" value="max-p" id="to-max-price">
          </fieldset>
         </form> 
       </div>
-      
+
         <ul>
           <li>
             <h3><a href="#">Sedona</a></h3>
@@ -150,6 +150,7 @@
                 <button type="button">9 900 ₽</button>
                 <img src="https://via.placeholder.com/358x578" alt="Крафтовый квас - КВАСТ">
             </li>
+        </ul>
         <ul>
           <li><button type="button" disabled>1</button></li>
           <li><button type="button">2</button></li>
@@ -157,10 +158,10 @@
           <li><button type="button">следующая</button></li>
         </ul>
       </section>
-
+    </main>
       <footer>
         <!-- Подвал сайта -->
-        <section>
+         <section>
          <h2>Контакты</h2>
         <h3>NЁRDS DESIGN STUDIO</h3>
       <p>191186, Санкт-Петербург,<br>
@@ -185,9 +186,9 @@
       </section>
 
     <section> 
-      <h2>«Давайте дружить, это выгодно!» </h2>
+      <h2>«Давайте дружить, это выгодно!»</h2>
       <p>Скидка 10% для друзей из социальных сетей.</p>
     </section>
-      </footer>
+  </footer>
         </body>
       </html>
