--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 <header>
   <!-- Шапка сайта -->
   <a href="./index.html">
-    <img src="https://via.placeholder.com/159.87x65.02" alt="Логотип интернет магазина «Nerds»">
+    <img src="img/nerds-logo.svg" width="159.87" height="65.02" alt="Логотип интернет магазина «Nerds»">
         </a>
   <nav>
   <ul>
@@ -113,42 +113,42 @@
                 <p>Информационный сайт<br>
                     для туристов</p>
                 <button type="button"> 9 900 ₽ </button>
-                <img src="https://via.placeholder.com/358x578" alt="Sedona Информационный сайт для туристов">
+                <img src="img/img-sedona.jpg" width="358" height="578" alt="Пример сайта Sedona">
             </li>
             <li>
                 <h3><a href="#">Pink App</a></h3>
                 <p>Продуктовый лендинг<br>
                 приложения для iOS и Android</p>
                 <button type="button">9 900 ₽</button>
-                <img src="https://via.placeholder.com/358x578" alt="Приложение Pink">
+                <img src="img/img-pink.jpg" width="358" height="578" alt="Пример приложения Pink">
             </li>
             <li>
                 <h3><a href="#">Barbershop</a></h3>
                 <p>Сайт салона красоты.<br>
                     Для мужчин, да.</p>
                 <button type="button">9 900 ₽</button>
-                <img src="https://via.placeholder.com/358x578" alt="Барбершоп">
+                <img src="img/img-barbershop.jpg" width="358" height="578" alt="Пример сайта для барбершопа">
             </li>
             <li>
                <h3><a href="#">MISHKA</a></h3>
                 <p>Интернет-магазин<br>
                     вязаных игрушек</p>
                 <button type="button">9 900 ₽</button>
-                <img src="https://via.placeholder.com/358x578" alt="Мишка - магазин вязаных игрушек">
+                <img src="img/img-mishka.png" width="358" height="578" alt="Пример интернет-магазина для магазина Мишка">
             </li>
             <li>
                 <h3><a href="#">A Plus</a></h3>
                 <p>Лендинг курсов повышения
                     квалификации</p>
                 <button type="button">9 900 ₽</button>
-                <img src="https://via.placeholder.com/358x578" alt="Курсы повышения квалификации A Plus">
+                <img src="img/img-aplus.jpg" width="358" height="578" alt="Пример лендинга курсов повышения квалификации A Plus">
             </li>
             <li>
                 <h3><a href="#">КВАСТ</a></h3>
                 <p>Промо-сайт производителя
                     крафтового кваса</p>
                 <button type="button">9 900 ₽</button>
-                <img src="https://via.placeholder.com/358x578" alt="Крафтовый квас - КВАСТ">
+                <img src="img/img-kvast.jpg" width="358" height="578" alt="Пример промо-сайта крафтового кваса - КВАСТ">
             </li>
         </ul>
         <ul>
@@ -168,19 +168,19 @@
         ул. Б. Конюшенная, д. 19/8<br>
         тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
         <button type="button">напишите нам</button>
-      <img src="https://via.placeholder.com/231x190" alt="map-marker">
+      <img src="img/map.jpg" width="1440" height="416" alt="Карта">
       </section>
       <section>
         <h2>Мы в соцсетях</h2>
         <ul>
           <li>
-            <a href="#">Вконтакте</a>
+            <a href="#"><img src="img/socials/vk-icon.svg" width="26.01" height="15" alt="Мы в Вконтакте"></a>
           </li>
           <li>
-            <a href="#">Фейсбук</a>
+            <a href="#"><img src="img/socials/fb-icon.svg" width="12" height="22" alt="Мы в facebook"></a>
           </li>
           <li>
-            <a href="#">Инстаграм</a>
+            <a href="#"><img src="img/socials/insta-icon.svg" width="21" height="21" alt="Мы в instagram"></a>
           </li>
         </ul>
       </section>
