--- a/index.html
+++ b/index.html
@@ -1,179 +1,186 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Nerds studio</title>
-  </head>
-  <body>
-<header>
-  <a  href="#">
-    <img src="https://via.placeholder.com/159.87x65.02" alt="Логотип интернет магазина «Nerds»">
-        </a>
-  <!-- Шапка сайта -->
-  <nav>
-  <ul>
-    <li><a>СТУДИЯ</a></li>
-    <li><a href="#">КЛИЕНТЫ</a></li>
-    <li><a href="./catalog.html">МАГАЗИН</a></li>
-    <li><a href="#">КОНТАКТЫ</a></li>  
-    <li><a href="#">КОРЗИНА</a></li>
-</ul>
-  </nav>
-</header>
+
+<head>
+  <meta charset="utf-8">
+  <title>Nerds studio</title>
+  <link rel="icon" href="favicon.ico"><!-- 32×32 -->
+  <link rel="icon" href="icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="apple.png"><!-- 180×180 -->
+  <link rel="manifest" href="manifest.webmanifest">
+</head>
+
+<body>
+  <header>
+    <a href="#">
+      <img src="img/nerds-logo.svg" width="159,87" height="65,02" alt="Логотип интернет магазина «Nerds»">
+    </a>
+    <!-- Шапка сайта -->
+    <nav>
+      <ul>
+        <li><a>СТУДИЯ</a></li>
+        <li><a href="#">КЛИЕНТЫ</a></li>
+        <li><a href="./catalog.html">МАГАЗИН</a></li>
+        <li><a href="#">КОНТАКТЫ</a></li>
+        <li><a href="#">КОРЗИНА</a></li>
+      </ul>
+    </nav>
+  </header>
   <main>
     <!-- Основное содержимое страницы -->
- <h1>Интернет магазин «Nerds»</h1>
- <!-- Слайдер -->
- <section>
-   <h2>Преимущества</h2>
-<ul>
-  <li>
-  <h3>Долго, дорого
-    скрупулезно.</h3>
-  <p>Математически выверенный дизайн
-  для вашего сайта или мобильного приложения.</p>
-  <a href="#">Узнать больше</a>
-  <img src="https://via.placeholder.com/1157x431" alt="Слайд-1">
-</li>
-<li>
-  <h3>Любим математику
-   как никто другой.</h3>
-   <p>Никакого креатива, только математические формулы
-  для расчета идеальных пропорций.</p>
-  <a href="#">Узнать больше</a>
-  <img src="https://via.placeholder.com/1157x431" alt="Слайд-2">
-</li>
-<li>
-  <h3>Только ночь,
-  только хардкор</h3>
-  <p>Работать днем, как все? Мы против этого.
-  Ближе к полуночи работа только начинается.</p>
-  <a href="#">Узнать больше</a>
-  <img src="https://via.placeholder.com/1157x431" alt="Слайд-3">
-</li>
-</ul>
-<div>
-  <button type="button">Первый слайд</button>
-  <button type="button">Второй слайд</button>
-  <button type="button">Третий слайд</button>
-</div>
-  </section>
-  <section>
-    <h2>Услуги</h2>
-    <ul>
-<li>
-  <h3>Веб сайты</h3>
-<p>Мир никогда не будет прежним<br>
-  после того как увидит ваш сайт!</p>
-  <a href="#">Заказать</a>
-  <img src="https://via.placeholder.com/300x146" alt="Веб-сайты">
-</li>
-<li>
-  <h3>Приложения</h3>
-<p>Покорите топ-10 приложений<br>
-  в AppStore и Google Play</p>
-  <a href="#">Заказать</a>
-  <img src="https://via.placeholder.com/300x146" alt="Приложения">
-</li>
-<li>
-  <h3>Презентации</h3>
-<p>Вы даже не подозреваете,<br>
-  насколько вы изумительны!</p>
-  <a href="#">Заказать</a>
-  <img src="https://via.placeholder.com/300x146" alt="Презентации">
-</li>
-  </ul>
-  </section>
-  
-  <section>
-    <h2>О нас</h2>
-    <div>
-    <p><strong>Мы — маленькая, но гордая
-      дизайн-студия из Краснодара.</strong></p>
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
-        превыше креатива. Работаем не покладая рук, как роботы.</p>
+    <h1>Интернет магазин «Nerds»</h1>
+    <!-- Слайдер -->
+    <section>
+      <h2>Преимущества</h2>
+      <ul>
+        <li>
+          <h3>Долго, дорого
+            скрупулезно.</h3>
+          <p>Математически выверенный дизайн
+            для вашего сайта или мобильного приложения.</p>
+          <a href="#">Узнать больше</a>
+          <img src="https://via.placeholder.com/1157x431" alt="Слайд-1">
+        </li>
+        <li>
+          <h3>Любим математику
+            как никто другой.</h3>
+          <p>Никакого креатива, только математические формулы
+            для расчета идеальных пропорций.</p>
+          <a href="#">Узнать больше</a>
+          <img src="https://via.placeholder.com/1157x431" alt="Слайд-2">
+        </li>
+        <li>
+          <h3>Только ночь,
+            только хардкор</h3>
+          <p>Работать днем, как все? Мы против этого.
+            Ближе к полуночи работа только начинается.</p>
+          <a href="#">Узнать больше</a>
+          <img src="https://via.placeholder.com/1157x431" alt="Слайд-3">
+        </li>
+      </ul>
+      <div>
+        <button type="button">Первый слайд</button>
+        <button type="button">Второй слайд</button>
+        <button type="button">Третий слайд</button>
+      </div>
+    </section>
+    <section>
+      <h2>Услуги</h2>
+      <ul>
+        <li>
+          <h3>Веб сайты</h3>
+          <p>Мир никогда не будет прежним<br>
+            после того как увидит ваш сайт!</p>
+          <a href="#">Заказать</a>
+          <img src="https://via.placeholder.com/300x146" alt="Веб-сайты">
+        </li>
+        <li>
+          <h3>Приложения</h3>
+          <p>Покорите топ-10 приложений<br>
+            в AppStore и Google Play</p>
+          <a href="#">Заказать</a>
+          <img src="https://via.placeholder.com/300x146" alt="Приложения">
+        </li>
+        <li>
+          <h3>Презентации</h3>
+          <p>Вы даже не подозреваете,<br>
+            насколько вы изумительны!</p>
+          <a href="#">Заказать</a>
+          <img src="https://via.placeholder.com/300x146" alt="Презентации">
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>О нас</h2>
+      <div>
+        <p><strong>Мы — маленькая, но гордая
+            дизайн-студия из Краснодара.</strong></p>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+          превыше креатива. Работаем не покладая рук, как роботы.</p>
         <h3>Выполняем заказы на разработку:</h3>
         <ul>
           <li>Веб-сайтов любой сложности</li>
           <li>Мобильных приложений для iOS и Android</li>
           <li> Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
-        </div>
-        <div>
-        <img src="https://via.placeholder.com/360x208" alt="brightnerds">
+      </div>
+      <div>
+        <img src="img/nerds-logo-illustration.png" width="360" height="208" alt="рисунок логотипа Nerds">
         <h3>с 2004 года Любим точность во всем:</h3>
-          <ul>
-            <li><h4>146<sup>%</sup></h4>
-             <p>Уровень самоотдачи</p>
-            </li>
-            <li><h4>100<sup>%</sup></h4>
-              <p>Соблюдение сроков</p>
-            </li>
-            <li><h4>50<sup>%</sup></h4>
+        <ul>
+          <li>
+            <h4>146<sup>%</sup></h4>
+            <p>Уровень самоотдачи</p>
+          </li>
+          <li>
+            <h4>100<sup>%</sup></h4>
+            <p>Соблюдение сроков</p>
+          </li>
+          <li>
+            <h4>50<sup>%</sup></h4>
             <p>Минимальная предоплата</p>
-            </li>
-          </ul>
-        </div>
-        </section>
-        <section>
-            <h2>Клиенты</h2>
-            <ul>
-              <li>
-                <a href="https://htmlacademy.ru/intensive/htmlcss">
-                  <img src="https://via.placeholder.com/199x68" alt="html academy">
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="https://via.placeholder.com/209x87" alt="Borodinski">
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="https://via.placeholder.com/185x52" alt="Pink">
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="https://via.placeholder.com/173x84" alt="Mishka">
-                </a>
-              </li>
-            </ul>
-          </section>
-      </main>
-<footer>
-  <!-- Подвал сайта -->
-  <section>
-   <h2>Контакты</h2>
-  <h3>NЁRDS DESIGN STUDIO</h3>
-<p>191186, Санкт-Петербург,<br>
-  ул. Б. Конюшенная, д. 19/8<br>
-  тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
-  <button type="button">напишите нам</button>
-<img src="https://via.placeholder.com/231x190" alt=map-marker">
-</section>
-<section>
-  <h2>Мы в соцсетях</h2>
-   <ul>
-    <li>
-      <a href="#">Вконтакте</a>
-    </li>
-    <li>
-      <a href="#">Фейсбук</a>
-    </li>
-    <li>
-      <a href="#">Инстаграм</a>
-    </li>
-  </ul>
-</section>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <h2>Клиенты</h2>
+      <ul>
+        <li>
+          <a href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/html_academy.png" width="199" height="67.82" alt="Логотип клиента html academy">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/Borodinski.png" width="209" height="90" alt="Логотип клиента Borodinski">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/pink.png" width="185" height="52" alt="Логотип клиента Pink">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/Mishka.png" width="173" height="84" alt="Логотип клиента Mishka">
+          </a>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <!-- Подвал сайта -->
+    <section>
+      <h2>Контакты</h2>
+      <h3>NЁRDS DESIGN STUDIO</h3>
+      <p>191186, Санкт-Петербург,<br>
+        ул. Б. Конюшенная, д. 19/8<br>
+        тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
+      <button type="button">напишите нам</button>
+      <img src="img/map.jpg" width="1440" height="416" alt="Карта">
+    </section>
+    <section>
+      <h2>Мы в соцсетях</h2>
+      <ul>
+        <li>
+          <a href="#"><img src="img/socials/vk-icon.svg" width="26.01" height="15" alt="Мы в Вконтакте"></a>
+        </li>
+        <li>
+          <a href="#"><img src="img/socials/fb-icon.svg" width="12" height="22" alt="Мы в facebook"></a>
+        </li>
+        <li>
+          <a href="#"><img src="img/socials/insta-icon.svg" width="21" height="21" alt="Мы в instagram"></a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>«Давайте дружить, это выгодно!» </h2>
+      <p>Скидка 10% для друзей из социальных сетей.</p>
+    </section>
 
-<section>
+  </footer>
+</body>
 
-<h2>«Давайте дружить, это выгодно!» </h2>
-<p>Скидка 10% для друзей из социальных сетей.</p>
-
-</section>
-
-</footer>
-  </body>
 </html>
