--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Шапка сайта -->
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li><a href="#">СТУДИЯ</a></li>
+        <li><a class="navigation-item" href="#">СТУДИЯ</a></li>
         <li><a href="#">КЛИЕНТЫ</a></li>
         <li><a href="./catalog.html">МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
@@ -35,29 +35,29 @@
   </header>
   <main class="container">
     <!-- Основное содержимое страницы -->
-    <h1>Интернет магазин «Nerds»</h1>
+    <h1 class="visually-hidden">Интернет магазин «Nerds»</h1>
     <!-- Слайдер -->
     <section class="features">
-      <h2>Преимущества</h2>
+      <h2 class="visually-hidden">Преимущества</h2>
       <ul class="features-list">
         <li class="feature-item">
-          <h3>Долго, дорого
+          <h3 class="feature-title">Долго, дорого
             скрупулезно.</h3>
-          <p>Математически выверенный дизайн
+          <p class="feature-p">Математически выверенный дизайн
             для вашего сайта или мобильного приложения.</p>
           <a href="#" class="button features-button">Узнать больше</a>
         </li>
         <li class="feature-item">
-          <h3>Любим математику
+          <h3 class="feature-title">Любим математику
             как никто другой.</h3>
-          <p>Никакого креатива, только математические формулы
+          <p class="feature-p">Никакого креатива, только математические формулы
             для расчета идеальных пропорций.</p>
           <a href="#" class="button features-button">Узнать больше</a>
         </li>
         <li class="feature-item">
-          <h3>Только ночь,
+          <h3 class="feature-title">Только ночь,
             только хардкор</h3>
-          <p>Работать днем, как все? Мы против этого.
+          <p class="feature-p">Работать днем, как все? Мы против этого.
             Ближе к полуночи работа только начинается.</p>
           <a href="#" class="button features-button">Узнать больше</a>
         </li>
@@ -69,24 +69,24 @@
       </div>
     </section>
     <section class="services">
-      <h2>Услуги</h2>
+      <h2 class="visually-hidden">Услуги</h2>
       <ul class="services-list">
         <li class="services-item">
-          <h3>Веб сайты</h3>
+          <h3 class="services-title">Веб сайты</h3>
           <p>Мир никогда не будет прежним<br>
             после того как увидит ваш сайт!</p>
           <a href="#" class="button services-button-red">Заказать</a>
           <img src="img/web.png" aria-hidden="true" width="300" height="146" alt="Веб-сайты">
         </li>
         <li class="services-item">
-          <h3>Приложения</h3>
+          <h3 class="services-title">Приложения</h3>
           <p>Покорите топ-10 приложений<br>
             в AppStore и Google Play</p>
           <a href="#" class="button services-button-green">Заказать</a>
           <img src="img/app.png" aria-hidden="true" width="300" height="146" alt="Приложения">
         </li>
         <li class="services-item">
-          <h3>Презентации</h3>
+          <h3 class="services-title">Презентации</h3>
           <p>Вы даже не подозреваете,<br>
             насколько вы изумительны!</p>
           <a href="#" class="button services-button-yellow">Заказать</a>
@@ -96,13 +96,13 @@
     </section>
     
     <section class="index-columns">
-      <h2>О нас</h2>
+      <h2 class="visually-hidden">О нас</h2>
       <div class="about">
-        <p><strong>Мы — маленькая, но гордая
+        <p class="about-lead"><strong>Мы — маленькая, но гордая
             дизайн-студия из Краснодара.</strong></p>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
           превыше креатива. Работаем не покладая рук, как роботы.</p>
-        <h3>Выполняем заказы на разработку:</h3>
+        <h3 class="about-title">Выполняем заказы на разработку:</h3>
         <ul>
           <li>Веб-сайтов любой сложности</li>
           <li>Мобильных приложений для iOS и Android</li>
@@ -112,18 +112,18 @@
 
       <div class="percents">
         <img src="img/nerds-logo-illustration.png" width="360" height="208" alt="рисунок логотипа Nerds">
-        <h3 class="accuracy">с 2004 года Любим точность во всем:</h3>
+        <h3 class="accuracy-title">с 2004 года Любим точность во всем:</h3>
         <ul class="percents-list">
           <li class="percents-item">
-            <h4>146<sup class="sign">%</sup></h4>
+            <h4 class="percents-title">146<sup class="sign">%</sup></h4>
             <p class="percents-text">Уровень самоотдачи</p>
           </li>
           <li class="percents-item">
-            <h4>100<sup class="sign">%</sup></h4>
+            <h4 class="percents-title">100<sup class="sign">%</sup></h4>
             <p class="percents-text">Соблюдение сроков</p>
           </li>
           <li class="percents-item">
-            <h4>50<sup class="sign">%</sup></h4>
+            <h4 class="percents-title">50<sup class="sign">%</sup></h4>
             <p class="percents-text">Минимальная предоплата</p>
           </li>
         </ul>
@@ -131,7 +131,7 @@
     </section>
     <hr>
     <section class="clients">
-      <h2>Клиенты</h2>
+      <h2 class="visually-hidden">Клиенты</h2>
     
       <ul class="clients-list">
         <li class="clients-item">
@@ -161,7 +161,7 @@
   <footer class="main-footer">
     <!-- Подвал сайта -->
     <section class="contacts">
-      <h2>Контакты</h2>
+      <h2 class="visually-hidden">Контакты</h2>
       <h3>NЁRDS DESIGN STUDIO</h3>
       <p>191186, Санкт-Петербург,<br>
         ул. Б. Конюшенная, д. 19/8
@@ -174,29 +174,33 @@
     </section>
     <section class="footer-social">
       <h2>Мы в соцсетях</h2>
-      <ul>
-        <li>
-          <a class="social-button round" href="#"><svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M16.138 11.5102C17.094 11.2012 18.318 13.5502 19.621 14.4492C20.599 15.1302 21.348 14.9832 21.348 14.9832L24.821 14.9332C24.821 14.9332 26.636 14.8212 25.778 13.3792C25.707 13.2592 25.275 12.3102 23.193 10.3572C21.016 8.31425 21.311 8.64524 23.932 5.11326C25.529 2.96027 26.168 1.64527 25.968 1.08528C25.776 0.546279 24.603 0.686279 24.603 0.686279L20.69 0.713278C20.309 0.714278 19.986 0.832278 19.839 1.22828C19.836 1.23228 19.218 2.89427 18.394 4.30726C16.653 7.29625 15.958 7.45525 15.67 7.26825C15.009 6.83525 15.176 5.53126 15.176 4.60426C15.176 1.70727 15.608 0.499279 14.33 0.187281C13.903 0.0832812 13.591 0.0152815 12.502 0.00528153C11.11 -0.0157184 9.92797 0.00528154 9.25797 0.33428C8.81297 0.557279 8.47197 1.04628 8.67897 1.07428C8.93897 1.10928 9.52197 1.23428 9.83397 1.66027C10.235 2.21227 10.223 3.44927 10.223 3.44927C10.223 3.44927 10.452 6.86025 9.68297 7.28325C9.15497 7.57325 8.43297 6.98125 6.87997 4.26726C6.08697 2.87927 5.48797 1.34528 5.48797 1.34528C5.48797 1.34528 5.37197 1.06028 5.16197 0.904278C4.91197 0.719278 4.56197 0.660279 4.56197 0.660279L0.84797 0.684278C0.84797 0.684278 0.28997 0.700278 0.0849697 0.946277C-0.0970303 1.16428 0.0699697 1.61427 0.0699697 1.61427C0.0699697 1.61427 2.97897 8.49524 6.27297 11.9612C9.29297 15.1432 12.725 14.9322 12.725 14.9322H14.28C14.28 14.9322 14.749 14.8782 14.989 14.6202C15.213 14.3802 15.203 13.9292 15.203 13.9292C15.203 13.9292 15.172 11.8202 16.138 11.5102Z" fill="white"/>
+      <ul class="social-list" style="display: flex; flex-wrap: wrap;">
+        <li class="circle">
+          <a class="social-button round" href="#" style='text-align: center; vertical-align: center;'>
+            <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M16.138 11.5102C17.094 11.2012 18.318 13.5502 19.621 14.4492C20.599 15.1302 21.348 14.9832 21.348 14.9832L24.821 14.9332C24.821 14.9332 26.636 14.8212 25.778 13.3792C25.707 13.2592 25.275 12.3102 23.193 10.3572C21.016 8.31425 21.311 8.64524 23.932 5.11326C25.529 2.96027 26.168 1.64527 25.968 1.08528C25.776 0.546279 24.603 0.686279 24.603 0.686279L20.69 0.713278C20.309 0.714278 19.986 0.832278 19.839 1.22828C19.836 1.23228 19.218 2.89427 18.394 4.30726C16.653 7.29625 15.958 7.45525 15.67 7.26825C15.009 6.83525 15.176 5.53126 15.176 4.60426C15.176 1.70727 15.608 0.499279 14.33 0.187281C13.903 0.0832812 13.591 0.0152815 12.502 0.00528153C11.11 -0.0157184 9.92797 0.00528154 9.25797 0.33428C8.81297 0.557279 8.47197 1.04628 8.67897 1.07428C8.93897 1.10928 9.52197 1.23428 9.83397 1.66027C10.235 2.21227 10.223 3.44927 10.223 3.44927C10.223 3.44927 10.452 6.86025 9.68297 7.28325C9.15497 7.57325 8.43297 6.98125 6.87997 4.26726C6.08697 2.87927 5.48797 1.34528 5.48797 1.34528C5.48797 1.34528 5.37197 1.06028 5.16197 0.904278C4.91197 0.719278 4.56197 0.660279 4.56197 0.660279L0.84797 0.684278C0.84797 0.684278 0.28997 0.700278 0.0849697 0.946277C-0.0970303 1.16428 0.0699697 1.61427 0.0699697 1.61427C0.0699697 1.61427 2.97897 8.49524 6.27297 11.9612C9.29297 15.1432 12.725 14.9322 12.725 14.9322H14.28C14.28 14.9322 14.749 14.8782 14.989 14.6202C15.213 14.3802 15.203 13.9292 15.203 13.9292C15.203 13.9292 15.172 11.8202 16.138 11.5102Z" fill="white"/>
             </svg>
-            </a>
+          </a>
         </li>
-        <li>
+        <li class="circle">
           <a class="social-button" href="#"><svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white"/>
             </svg></a>
         </li>
-        <li>
-          <a  class="social-button" href="#"><svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0H18C19.65 0 21 1.34998 21 2.99997V17.9998C21 19.6498 19.65 20.9998 18 20.9998H3C1.35 20.9998 0 19.6498 0 17.9998V2.99997C0 1.34998 1.35 0 3 0ZM14 10.5001C14 8.57006 12.43 7 10.5 7C8.57 7 7 8.57006 7 10.5001C7 12.4302 8.57 14.0002 10.5 14.0002C12.43 14.0002 14 12.4302 14 10.5001ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91016 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9987 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V2.99976H14V7Z" fill="white"/>
+        <li class="circle">
+          <a class="social-button" href="#"><svg width="21" height="21" viewBox="0 0 21 21" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" text-anchor='middle'
+                d="M3 0H18C19.65 0 21 1.34998 21 2.99997V17.9998C21 19.6498 19.65 20.9998 18 20.9998H3C1.35 20.9998 0 19.6498 0 17.9998V2.99997C0 1.34998 1.35 0 3 0ZM14 10.5001C14 8.57006 12.43 7 10.5 7C8.57 7 7 8.57006 7 10.5001C7 12.4302 8.57 14.0002 10.5 14.0002C12.43 14.0002 14 12.4302 14 10.5001ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91016 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9987 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V2.99976H14V7Z"
+                fill="white" />
             </svg>
-            </a>
+          </a>
         </li>
       </ul>
     </section>
     <section class="discount">
-      <h2>Давайте дружить, это выгодно!</h2>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
+      <h2 class="discount-title">Давайте дружить, это выгодно!</h2>
+      <p class="discount-p">Скидка 10% для друзей из социальных сетей.</p>
     </section>
 
   </footer>
