Вношу дополнительные правки в css и html.
Добавила прозрачность текста кнопок (не сработало)
Убрала h3 из css
Скорректировала структуру css
Добавила кнопкам наследование шрифта
Стилизовала кнопки переключения слайдера
Скрыла их текст
Убрала красное подчеркивание "студия"

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Шапка сайта -->
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li><a class="navigation-item" href="#">Студия</a></li>
+        <li><a href="#">Студия</a></li>
         <li><a href="#">Клиенты</a></li>
         <li><a href="./catalog.html">Магазин</a></li>
         <li><a href="#">Контакты</a></li>
@@ -62,9 +62,9 @@
         </li>
       </ul>
       <div>
-        <button type="button">Первый слайд</button>
-        <button type="button">Второй слайд</button>
-        <button type="button">Третий слайд</button>
+        <button type="button" class="slider-button"><span class="visually-hidden">Первый слайд</span></button>
+        <button type="button" class="slider-button"><span class="visually-hidden">Второй слайд</span></button>
+        <button type="button" class="slider-button"><span class="visually-hidden">Третий слайд</span></button>
       </div>
     </section>
     <section class="services">
@@ -161,7 +161,7 @@
     <!-- Подвал сайта -->
     <section class="contacts">
       <h2 class="visually-hidden">Контакты</h2>
-      <h3>NЁRDS DESIGN STUDIO</h3>
+      <h3 class="footer-title">NЁRDS DESIGN STUDIO</h3>
       <p>191186, Санкт-Петербург,<br>
         ул. Б. Конюшенная, д. 19/8
 
@@ -172,7 +172,7 @@
       <img src="img/map.jpg" width="1440" height="416" alt="Карта">
     </section>
     <section class="footer-social">
-      <h2>Мы в соцсетях</h2>
+      <h2 class="visually-hidden">Мы в соцсетях</h2>
       <ul class="social-list" style="display: flex; flex-wrap: wrap;">
         <li class="circle">
           <a class="social-button round" href="#" style='text-align: center; vertical-align: center;'>
