Выполняю ДЗ "Сетка на гридах для главной страницы".
Не применяются свойства к блоку меню.
Не знаю как сделать боковые отступы у страницы.
Не знаю как поместить блок с кнопкой на карту.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="page-body">
-  <header class="main-header">
+  <header class="main-header container">
     <a href="#" class="main-header-logo">
       <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии «Nerds»">
     </a>
@@ -110,7 +110,8 @@
       </div>
 
       <div class="stats">
-        <img src="img/nerds-logo-illustration.png" width="368" height="216" alt="Рисунок логотипа Nerds">
+        <img class="stats-img" src="img/nerds-logo-illustration.png" width="368" height="216"
+          alt="Рисунок логотипа Nerds">
         <h3 class="accuracy-title">с 2004 года Любим точность во всем:</h3>
         <ul class="stats-list">
           <li class="stats-item">
@@ -157,54 +158,57 @@
   </main>
 
   <footer class="main-footer">
-    <section class="contacts">
-      <h2 class="visually-hidden">Контакты</h2>
-      <h3 class="contacts-title">NЁRDS DESIGN STUDIO</h3>
-      <p class="contacts-text">191186, Санкт-Петербург,<br>
-        ул. Б. Конюшенная, д. 19/8</p>
-      <div>
-        <a class="contacts-link" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
-      </div>
-      <a href="#" type="button" class="button button-primary contacts-button">напишите нам</a>
-      <img src="img/map.jpg" width="2880" height="416" alt="Карта">
-    </section>
+    <div class="container">
+      <section class="contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <h3 class="contacts-title">NЁRDS DESIGN STUDIO</h3>
+        <p class="contacts-text">191186, Санкт-Петербург,<br>
+          ул. Б. Конюшенная, д. 19/8</p>
+        <div>
+          <a class="contacts-link" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
+        </div>
+        <a href="#" type="button" class="button button-primary contacts-button">напишите нам</a>
+        <img src="img/map.jpg" width="2880" height="416" alt="Карта">
+      </section>
 
-    <div class="footer-info">
-      <h2 class="visually-hidden">Мы в соцсетях</h2>
-      <ul class="social-list">
-        <li class="social-item">
-          <a class="social-button" href="#">
-            <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M16.138 11.5102C17.094 11.2012 18.318 13.5502 19.621 14.4492C20.599 15.1302 21.348 14.9832 21.348 14.9832L24.821 14.9332C24.821 14.9332 26.636 14.8212 25.778 13.3792C25.707 13.2592 25.275 12.3102 23.193 10.3572C21.016 8.31425 21.311 8.64524 23.932 5.11326C25.529 2.96027 26.168 1.64527 25.968 1.08528C25.776 0.546279 24.603 0.686279 24.603 0.686279L20.69 0.713278C20.309 0.714278 19.986 0.832278 19.839 1.22828C19.836 1.23228 19.218 2.89427 18.394 4.30726C16.653 7.29625 15.958 7.45525 15.67 7.26825C15.009 6.83525 15.176 5.53126 15.176 4.60426C15.176 1.70727 15.608 0.499279 14.33 0.187281C13.903 0.0832812 13.591 0.0152815 12.502 0.00528153C11.11 -0.0157184 9.92797 0.00528154 9.25797 0.33428C8.81297 0.557279 8.47197 1.04628 8.67897 1.07428C8.93897 1.10928 9.52197 1.23428 9.83397 1.66027C10.235 2.21227 10.223 3.44927 10.223 3.44927C10.223 3.44927 10.452 6.86025 9.68297 7.28325C9.15497 7.57325 8.43297 6.98125 6.87997 4.26726C6.08697 2.87927 5.48797 1.34528 5.48797 1.34528C5.48797 1.34528 5.37197 1.06028 5.16197 0.904278C4.91197 0.719278 4.56197 0.660279 4.56197 0.660279L0.84797 0.684278C0.84797 0.684278 0.28997 0.700278 0.0849697 0.946277C-0.0970303 1.16428 0.0699697 1.61427 0.0699697 1.61427C0.0699697 1.61427 2.97897 8.49524 6.27297 11.9612C9.29297 15.1432 12.725 14.9322 12.725 14.9322H14.28C14.28 14.9322 14.749 14.8782 14.989 14.6202C15.213 14.3802 15.203 13.9292 15.203 13.9292C15.203 13.9292 15.172 11.8202 16.138 11.5102Z"
-                fill="white" />
-            </svg>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-button" href="#">
-            <svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
-            </svg>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-button" href="#">
-            <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" text-anchor='middle'
-                d="M3 0H18C19.65 0 21 1.34998 21 2.99997V17.9998C21 19.6498 19.65 20.9998 18 20.9998H3C1.35 20.9998 0 19.6498 0 17.9998V2.99997C0 1.34998 1.35 0 3 0ZM14 10.5001C14 8.57006 12.43 7 10.5 7C8.57 7 7 8.57006 7 10.5001C7 12.4302 8.57 14.0002 10.5 14.0002C12.43 14.0002 14 12.4302 14 10.5001ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91016 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9987 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V2.99976H14V7Z"
-                fill="white" />
-            </svg>
-          </a>
-        </li>
-      </ul>
+      <div class="footer-info">
+        <h2 class="visually-hidden">Мы в соцсетях</h2>
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="social-button" href="#">
+              <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M16.138 11.5102C17.094 11.2012 18.318 13.5502 19.621 14.4492C20.599 15.1302 21.348 14.9832 21.348 14.9832L24.821 14.9332C24.821 14.9332 26.636 14.8212 25.778 13.3792C25.707 13.2592 25.275 12.3102 23.193 10.3572C21.016 8.31425 21.311 8.64524 23.932 5.11326C25.529 2.96027 26.168 1.64527 25.968 1.08528C25.776 0.546279 24.603 0.686279 24.603 0.686279L20.69 0.713278C20.309 0.714278 19.986 0.832278 19.839 1.22828C19.836 1.23228 19.218 2.89427 18.394 4.30726C16.653 7.29625 15.958 7.45525 15.67 7.26825C15.009 6.83525 15.176 5.53126 15.176 4.60426C15.176 1.70727 15.608 0.499279 14.33 0.187281C13.903 0.0832812 13.591 0.0152815 12.502 0.00528153C11.11 -0.0157184 9.92797 0.00528154 9.25797 0.33428C8.81297 0.557279 8.47197 1.04628 8.67897 1.07428C8.93897 1.10928 9.52197 1.23428 9.83397 1.66027C10.235 2.21227 10.223 3.44927 10.223 3.44927C10.223 3.44927 10.452 6.86025 9.68297 7.28325C9.15497 7.57325 8.43297 6.98125 6.87997 4.26726C6.08697 2.87927 5.48797 1.34528 5.48797 1.34528C5.48797 1.34528 5.37197 1.06028 5.16197 0.904278C4.91197 0.719278 4.56197 0.660279 4.56197 0.660279L0.84797 0.684278C0.84797 0.684278 0.28997 0.700278 0.0849697 0.946277C-0.0970303 1.16428 0.0699697 1.61427 0.0699697 1.61427C0.0699697 1.61427 2.97897 8.49524 6.27297 11.9612C9.29297 15.1432 12.725 14.9322 12.725 14.9322H14.28C14.28 14.9322 14.749 14.8782 14.989 14.6202C15.213 14.3802 15.203 13.9292 15.203 13.9292C15.203 13.9292 15.172 11.8202 16.138 11.5102Z"
+                  fill="white" />
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-button" href="#">
+              <svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-button" href="#">
+              <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" text-anchor='middle'
+                  d="M3 0H18C19.65 0 21 1.34998 21 2.99997V17.9998C21 19.6498 19.65 20.9998 18 20.9998H3C1.35 20.9998 0 19.6498 0 17.9998V2.99997C0 1.34998 1.35 0 3 0ZM14 10.5001C14 8.57006 12.43 7 10.5 7C8.57 7 7 8.57006 7 10.5001C7 12.4302 8.57 14.0002 10.5 14.0002C12.43 14.0002 14 12.4302 14 10.5001ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91016 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9987 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V2.99976H14V7Z"
+                  fill="white" />
+              </svg>
+            </a>
+          </li>
+        </ul>
 
-      <div class="discount">
-        <h2 class="discount-title">Давайте дружить, это выгодно!</h2>
-        <p class="discount-text">Скидка 10% для друзей из социальных сетей.</p>
+        <div class="discount">
+          <h2 class="discount-title">Давайте дружить, это выгодно!</h2>
+          <p class="discount-text">Скидка 10% для друзей из социальных сетей.</p>
+        </div>
       </div>
     </div>
   </footer>
+
   <section class="modal">
     <h2 class="modal-description">Напишите нам</h2>
     <button class="button modal-close">
