Внесла правки в каталог.

--- a/catalog.html
+++ b/catalog.html
@@ -20,30 +20,25 @@
       <a href="./index.html" class="main-header-logo">
         <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии «Nerds»">
       </a>
-      <!-- Шапка сайта -->
       <nav class="main-navigation">
-        <div class="main-header-bar">
-          <div class="main-navigation-wrapper"></div>
-          <ul class="site-navigation">
-            <li class="site-navigation-item">
-              <a href="#">Студия</a>
-            </li>
-            <li class="site-navigation-item">
-              <a href="#">Клиенты</a>
-            </li>
-            <li class="site-navigation-item">
-              <a>Магазин</a>
-            </li>
-            <li class="site-navigation-item">
-              <a href="#">Контакты</a>
-            </li>
-            <li class="site-navigation-item">
-              <a href="#">Корзина</a>
-            </li>
-          </ul>
-        </div>
-    </div>
-    </nav>
+        <ul class="site-navigation">
+          <li class="site-navigation-item">
+            <a href="#">Студия</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="#">Клиенты</a>
+          </li>
+          <li class="site-navigation-item">
+            <a>Магазин</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="#">Контакты</a>
+          </li>
+          <li class="site-navigation-item">
+            <a href="#">Корзина</a>
+          </li>
+        </ul>
+      </nav>
     </div>
     <h1 class="main-title container ">Магазин готовых шаблонов</h1>
   </header>
@@ -150,7 +145,8 @@
                 Для мужчин, да.</p>
               <a href="#" class="button button-primary example-button">9 900 ₽</a>
             </div>
-            <img class="example-img" src="img/img-barbershop.jpg" width="358" height="578" alt="Пример сайта для барбершопа">
+            <img class="example-img" src="img/img-barbershop.jpg" width="358" height="578"
+              alt="Пример сайта для барбершопа">
           </li>
           <li class="example-item">
             <div class="example-cover">
@@ -159,7 +155,8 @@
                 вязаных игрушек</p>
               <a href="#" class="button button-primary example-button">9 900 ₽</a>
             </div>
-            <img class="example-img" src="img/img-mishka.png" width="358" height="578" alt="Пример интернет-магазина для магазина Мишка">
+            <img class="example-img" src="img/img-mishka.png" width="358" height="578"
+              alt="Пример интернет-магазина для магазина Мишка">
           </li>
           <li class="example-item">
             <div class="example-cover">
@@ -178,7 +175,8 @@
                 крафтового кваса</p>
               <a href="#" class="button button-primary example-button">9 900 ₽</a>
             </div>
-            <img class="example-img" src="img/img-kvast.jpg" width="358" height="578" alt="Пример промо-сайта крафтового кваса - КВАСТ">
+            <img class="example-img" src="img/img-kvast.jpg" width="358" height="578"
+              alt="Пример промо-сайта крафтового кваса - КВАСТ">
           </li>
         </ul>
       </div>
