--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
           <li class="site-navigation-item">
             <a href="#">Контакты</a>
           </li>
-          <li class="site-navigation-item">
+          <li class="site-navigation-item basket-link">
             <a href="#">Корзина</a>
           </li>
         </ul>
-     </nav>
+      </nav>
     </div>
   </header>
 
@@ -47,37 +47,40 @@
     <!-- Слайдер -->
     <section class="features">
       <div class="container">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="features-list">
-          <li class="feature-item-current">
-            <h3 class="feature-title">Долго, дорого скрупулезно.</h3>
-            <p class="feature-text">Математически выверенный дизайн<br>
-              для вашего сайта или мобильного приложения.</p>
-            <a href="#" class="button button-primary">Узнать больше</a>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-title">Любим математику как никто другой.</h3>
-            <p class="feature-text">Никакого креатива, только математические формулы для расчета идеальных пропорций.
-            </p>
-            <a href="#" class="button button-primary">Узнать больше</a>
-          </li>
-          <li class="feature-item">
-            <h3 class="feature-title">Только ночь, только хардкор</h3>
-            <p class="feature-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.
-            </p>
-            <a href="#" class="button button-primary">Узнать больше</a>
-          </li>
-        </ul>
-        <div>
-          <button type="button" class="slider-button">
-            <span class="visually-hidden">Первый слайд</span>
-          </button>
-          <button type="button" class="slider-button">
-            <span class="visually-hidden">Второй слайд</span>
-          </button>
-          <button type="button" class="slider-button">
-            <span class="visually-hidden">Третий слайд</span>
-          </button>
+        <div class="site-wrapper site-wrapper-1">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <ul class="features-list">
+            <li class="feature-item slide-current">
+              <h3 class="feature-title">Долго, дорого скрупулезно.</h3>
+              <p class="feature-text">Математически выверенный дизайн<br>
+                для вашего сайта или мобильного приложения.</p>
+              <a href="#" class="button button-primary">Узнать больше</a>
+            </li>
+            <li class="feature-item slide">
+              <h3 class="feature-title">Любим математику как никто другой.</h3>
+              <p class="feature-text">Никакого креатива, только математические формулы для расчета идеальных пропорций.
+              </p>
+              <a href="#" class="button button-primary">Узнать больше</a>
+            </li>
+            <li class="feature-item slide">
+              <h3 class="feature-title">Только ночь, только хардкор</h3>
+              <p class="feature-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только
+                начинается.
+              </p>
+              <a href="#" class="button button-primary">Узнать больше</a>
+            </li>
+          </ul>
+          <div class="slider-controls">
+            <button class="current" type="button" class="slider-button">
+              <span class="visually-hidden">Первый слайд</span>
+            </button>
+            <button type="button" class="slider-button">
+              <span class="visually-hidden">Второй слайд</span>
+            </button>
+            <button type="button" class="slider-button">
+              <span class="visually-hidden">Третий слайд</span>
+            </button>
+          </div>
         </div>
       </div>
     </section>
@@ -172,14 +175,14 @@
     <section class="contacts">
       <div class="container">
         <div class="contacts-content">
-        <h3 class="contacts-title">NЁRDS DESIGN STUDIO</h3>
-        <p class="contacts-text">191186, Санкт-Петербург,<br>
-          ул. Б. Конюшенная, д. 19/8</p>
-        <div class="contacts-link">
-          <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
+          <h3 class="contacts-title">NЁRDS DESIGN STUDIO</h3>
+          <p class="contacts-text">191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8</p>
+          <div class="contacts-link">
+            <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
+          </div>
+          <a href="#" class="button button-primary contacts-button">напишите нам</a>
         </div>
-        <a href="#" class="button button-primary contacts-button">напишите нам</a>
-       </div>
       </div>
     </section>
 
