ДЗ: Декоративные элементы на главной странице - 2

--- a/index.html
+++ b/index.html
@@ -47,22 +47,21 @@
     <!-- Слайдер -->
     <section class="features">
       <div class="container">
-        <div class="site-wrapper site-wrapper-1">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="features-list">
-            <li class="feature-item slide-current">
+            <li class="feature-item feature-item-first slide-current">
               <h3 class="feature-title">Долго, дорого скрупулезно.</h3>
               <p class="feature-text">Математически выверенный дизайн<br>
                 для вашего сайта или мобильного приложения.</p>
               <a href="#" class="button button-primary">Узнать больше</a>
             </li>
-            <li class="feature-item slide">
+            <li class="feature-item feature-item-2 slide">
               <h3 class="feature-title">Любим математику как никто другой.</h3>
               <p class="feature-text">Никакого креатива, только математические формулы для расчета идеальных пропорций.
               </p>
               <a href="#" class="button button-primary">Узнать больше</a>
             </li>
-            <li class="feature-item slide">
+            <li class="feature-item feature-item-3 slide">
               <h3 class="feature-title">Только ночь, только хардкор</h3>
               <p class="feature-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только
                 начинается.
@@ -71,7 +70,7 @@
             </li>
           </ul>
           <div class="slider-controls">
-            <button class="current" type="button" class="slider-button">
+            <button type="button" class="slider-button slider-button-current">
               <span class="visually-hidden">Первый слайд</span>
             </button>
             <button type="button" class="slider-button">
@@ -81,7 +80,6 @@
               <span class="visually-hidden">Третий слайд</span>
             </button>
           </div>
-        </div>
       </div>
     </section>
 
