ДЗ: Декоративные элементы на внутренней странице - 2
Валидатор выдает ошибку у  css файла, но я не знаю чем это заменить.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="favicon.ico"><!-- 32×32 -->
   <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon/apple.png"><!-- 180×180 -->
-  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.webmanifest" crossorigin="use-credentials">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic-ext"
     rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
@@ -47,39 +47,39 @@
     <!-- Слайдер -->
     <section class="features">
       <div class="container">
-          <h2 class="visually-hidden">Преимущества</h2>
-          <ul class="features-list">
-            <li class="feature-item feature-item-first slide-current">
-              <h3 class="feature-title">Долго, дорого скрупулезно.</h3>
-              <p class="feature-text">Математически выверенный дизайн<br>
-                для вашего сайта или мобильного приложения.</p>
-              <a href="#" class="button button-primary">Узнать больше</a>
-            </li>
-            <li class="feature-item feature-item-2 slide">
-              <h3 class="feature-title">Любим математику как никто другой.</h3>
-              <p class="feature-text">Никакого креатива, только математические формулы для расчета идеальных пропорций.
-              </p>
-              <a href="#" class="button button-primary">Узнать больше</a>
-            </li>
-            <li class="feature-item feature-item-3 slide">
-              <h3 class="feature-title">Только ночь, только хардкор</h3>
-              <p class="feature-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только
-                начинается.
-              </p>
-              <a href="#" class="button button-primary">Узнать больше</a>
-            </li>
-          </ul>
-          <div class="slider-controls">
-            <button type="button" class="slider-button slider-button-current">
-              <span class="visually-hidden">Первый слайд</span>
-            </button>
-            <button type="button" class="slider-button">
-              <span class="visually-hidden">Второй слайд</span>
-            </button>
-            <button type="button" class="slider-button">
-              <span class="visually-hidden">Третий слайд</span>
-            </button>
-          </div>
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="features-list">
+          <li class="feature-item feature-item-first slide-current">
+            <h3 class="feature-title">Долго, дорого скрупулезно.</h3>
+            <p class="feature-text">Математически выверенный дизайн<br>
+              для вашего сайта или мобильного приложения.</p>
+            <a href="#" class="button button-primary">Узнать больше</a>
+          </li>
+          <li class="feature-item feature-item-2 slide">
+            <h3 class="feature-title">Любим математику как никто другой.</h3>
+            <p class="feature-text">Никакого креатива, только математические формулы для расчета идеальных пропорций.
+            </p>
+            <a href="#" class="button button-primary">Узнать больше</a>
+          </li>
+          <li class="feature-item feature-item-3 slide">
+            <h3 class="feature-title">Только ночь, только хардкор</h3>
+            <p class="feature-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только
+              начинается.
+            </p>
+            <a href="#" class="button button-primary">Узнать больше</a>
+          </li>
+        </ul>
+        <div class="slider-controls">
+          <button type="button" class="slider-button slider-button-current">
+            <span class="visually-hidden">Первый слайд</span>
+          </button>
+          <button type="button" class="slider-button">
+            <span class="visually-hidden">Второй слайд</span>
+          </button>
+          <button type="button" class="slider-button">
+            <span class="visually-hidden">Третий слайд</span>
+          </button>
+        </div>
       </div>
     </section>
 
@@ -175,7 +175,8 @@
         <div class="contacts-content">
           <h3 class="contacts-title">NЁRDS DESIGN STUDIO</h3>
           <p class="contacts-text">191186, Санкт-Петербург,<br>
-            ул. Б. Конюшенная, д. 19/8</p>
+            ул. Б. Конюшенная, д. 19/8
+          </p>
           <div class="contacts-link">
             <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
           </div>
