--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="favicon.ico"><!-- 32×32 -->
   <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon/apple.png"><!-- 180×180 -->
-  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.webmanifest" crossorigin="use-credentials">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic-ext"
     rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
@@ -28,14 +28,14 @@
           <li class="site-navigation-item">
             <a href="#">Клиенты</a>
           </li>
-          <li class="site-navigation-item">
+          <li class="site-navigation-item site-navigation-item-active">
             <a>Магазин</a>
           </li>
           <li class="site-navigation-item">
             <a href="#">Контакты</a>
           </li>
           <li class="site-navigation-item basket-link">
-            <a href="#">Корзина</a>
+            <a href="#" class="basket-link">Корзина</a>
           </li>
         </ul>
       </nav>
@@ -47,67 +47,73 @@
     <section class="filter">
       <h2 class="visually-hidden">Фильтр товаров</h2>
       <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
-        <fieldset class="filter-price">
+        <fieldset class="filter-group filter-price">
           <legend class="filter-title">Стоимость:</legend>
           <div class="range-filter">
             <div class="range-controls">
               <div class="scale">
                 <div class="bar"></div>
+              </div>
+              <div class="toggle toggle-min" tabindex="0"></div>
+              <div class="toggle toggle-max" tabindex="0"></div>
             </div>
-            <div class="toggle toggle-min" tabindex="0"></div>
-            <div class="toggle toggle-max" tabindex="0"></div>
+            <div class="price-controls">
+              <label class="min-price">
+                от <input type="number" name="min-price" value="0">
+              </label>
+              <label class="max-price">
+                до <input type="number" name="max-price" value="15000">
+              </label>
+            </div>
           </div>
-          <div class="price-controls">
-            <label class="min-price">
-              от <input type="number" name="min-price" value="0">
-            </label>
-            <label class="max-price">
-              до <input type="number" name="max-price" value="15000">
-            </label>
-          </div>
-        </div>
-    </fieldset>
-    
-        <fieldset class="filter-grid">
-          <legend class="filter-title">Cетка:</legend>
+        </fieldset>
+
+        <fieldset class="filter-group filter-grid">
+          <legend class="filter-title filter-margin">Cетка:</legend>
           <ul class="radio-list">
             <li class="radio-item">
-              <input class="filter-input-radio visually-hidden" type="radio" name="grid" value="adaptive" id="filter-adaptive" checked>
-              <label for="filter-adaptive" class="filter-name">Адаптивная</label>
+              <input class="filter-input-radio visually-hidden" type="radio" name="grid" value="adaptive"
+                id="filter-adaptive" checked>
+              <label for="filter-adaptive" class=" filter-radio">Адаптивная</label>
             </li>
             <li class="radio-item">
-              <input class="filter-input-radio visually-hidden" type="radio" name="grid" value="fixed" id="filter-fixed">
-              <label for="filter-fixed" class="filter-name">Фиксированная</label>
+              <input class="filter-input-radio visually-hidden" type="radio" name="grid" value="fixed"
+                id="filter-fixed">
+              <label for="filter-fixed" class="filter-radio">Фиксированная</label>
             </li>
             <li class="radio-item">
-              <input class="filter-input-radio visually-hidden" type="radio" name="grid" value="rubber" id="filter-rubber">
-              <label for="filter-rubber" class="filter-name">Резиновая</label>
+              <input class="filter-input-radio visually-hidden" type="radio" name="grid" value="rubber"
+                id="filter-rubber">
+              <label for="filter-rubber" class=" filter-radio">Резиновая</label>
             </li>
           </ul>
         </fieldset>
 
-        <fieldset class="filter-excellence">
-          <legend class="filter-title">Особенности</legend>
+        <fieldset class="filter-group filter-excellence">
+          <legend class="filter-title filter-margin">Особенности:</legend>
           <ul class="checkbox-list">
             <li class="checkbox-item">
-              <input class="filter-input-checkbox visually-hidden" type="checkbox" name="slider" id="filter-slider" checked>
-              <label for="filter-slider" cfilter-input-checkboxass="filter-name">Слайдер</label>
+              <input class="filter-input-checkbox visually-hidden" type="checkbox" name="slider" id="filter-slider"
+                checked>
+              <label for="filter-slider" class="filter-checkbox">Слайдер</label>
             </li>
             <li class="checkbox-item">
-              <input class="filter-input-checkbox visually-hidden" type="checkbox" name="advantages" id="filter-advantages">
-              <label for="filter-advantages" class="filter-name">Блок преимуществ</label>
+              <input class="filter-input-checkbox visually-hidden" type="checkbox" name="advantages"
+                id="filter-advantages">
+              <label for="filter-advantages" class="filter-checkbox">Блок преимуществ</label>
             </li>
             <li class="checkbox-item">
               <input class="filter-input-checkbox visually-hidden" type="checkbox" name="news" id="filter-news" checked>
-              <label for="filter-news" class="filter-name">Новости</label>
+              <label for="filter-news" class="filter-checkbox">Новости</label>
             </li>
             <li class="checkbox-item">
               <input class="filter-input-checkbox visually-hidden" type="checkbox" name="gallery" id="filter-gallery">
-              <label for="filter-gallery" class="filter-name">Галерея</label>
+              <label for="filter-gallery" class="filter-checkbox">Галерея</label>
             </li>
             <li class="checkbox-item">
-              <input class="filter-input-checkbox visually-hidden" type="checkbox" name="basket" id="filter-basket" checked>
-              <label for="filter-basket" class="filter-name">Корзина</label>
+              <input class="filter-input-checkbox visually-hidden" type="checkbox" name="basket" id="filter-basket"
+                checked>
+              <label for="filter-basket" class="filter-checkbox">Корзина</label>
             </li>
           </ul>
         </fieldset>
@@ -119,29 +125,25 @@
       <div class="sort">
         <h3 class="filter-title sort-title">Сортировать:</h3>
         <ul class="sort-list">
-          <li><a href="#" class="sort-type">по цене</a></li>
-          <li><a href="#" class="sort-type">по типу</a></li>
-          <li><a href="#" class="sort-type">по названию</a></li>
+          <li class="sort-place"><a class="sort-type sort-type-active" href="#">по цене</a></li>
+          <li class="sort-place"><a class="sort-type" href="#">по типу</a></li>
+          <li class="sort-place"><a class="sort-type" href="#">по названию</a></li>
         </ul>
 
         <ul class="sort-min-max">
           <li>
-            <a href="#" class="sort-button">
-            <span class="visually-hidden">по убыванию</span>
-            <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-             <g opacity="0.2">
-              <path d="M5.5 10L0 0H11" fill="#A6A6A6"/>
-             </g>
-            </svg>
-          </a>
-        </li>
+            <a href="#" class="sort-button sort-button-active ">
+              <span class="visually-hidden">по убыванию</span>
+              <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.5 10L0 0H11" fill="currentColor" />
+              </svg>
+            </a>
+          </li>
           <li>
             <a href="#" class="sort-button">
               <span class="visually-hidden">по возрастанию</span>
               <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g opacity="0.2">
-                <path d="M5.5 0L0 10H11L5.5 0Z" fill="#A6A6A6"/>
-                </g>
+                <path d="M5.5 0L0 10H11L5.5 0Z" fill="currentColor" />
               </svg>
             </a>
           </li>
@@ -211,7 +213,8 @@
         </ul>
       </div>
       <ul class="pagination-list">
-        <li class="pagination-item"><a href="#" class="button pagination-link" disabled>1</a></li>
+        <li class="pagination-item"><a href="#" class="button pagination-link pagination-link-active">1</a>
+        </li>
         <li class="pagination-item"><a href="#" class="button pagination-link">2</a></li>
         <li class="pagination-item"><a href="#" class="button pagination-link">3</a></li>
         <li class="pagination-item"><a href="#" class="button pagination-link link-next">следующая</a></li>
