ДЗ: Декоративные элементы на внутренней странице - 2
Сломались серые точки внутри регуляторов в фильтре. Хотя я их не трогала, не вижу ошибку.
Из-за серой границы вокруг картинок (или из-за тени) углы изображений стали острыми. Не знаю как убрать это.

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
             <h3 class="feature-title">Долго, дорого скрупулезно.</h3>
             <p class="feature-text">Математически выверенный дизайн<br>
               для вашего сайта или мобильного приложения.</p>
-            <a href="#" class="button button-primary">Узнать больше</a>
+            <a href="#" class="button button-primary feature-button">Узнать больше</a>
           </li>
           <li class="feature-item feature-item-2 slide">
             <h3 class="feature-title">Любим математику как никто другой.</h3>
             <p class="feature-text">Никакого креатива, только математические формулы для расчета идеальных пропорций.
             </p>
-            <a href="#" class="button button-primary">Узнать больше</a>
+            <a href="#" class="button button-primary feature-button">Узнать больше</a>
           </li>
           <li class="feature-item feature-item-3 slide">
             <h3 class="feature-title">Только ночь, только хардкор</h3>
             <p class="feature-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только
               начинается.
             </p>
-            <a href="#" class="button button-primary">Узнать больше</a>
+            <a href="#" class="button button-primary feature-button">Узнать больше</a>
           </li>
         </ul>
         <div class="slider-controls">
@@ -90,7 +90,7 @@
           <img src="img/web.png" class="services-img" aria-hidden="true" width="300" height="146" alt="Веб-сайты">
           <h3 class="services-title">Веб сайты</h3>
           <p class="services-text"> Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a href="#" class="button button-primary">Заказать</a>
+          <a href="#" class="button button-primary button-red">Заказать</a>
         </li>
         <li class="services-item">
           <img src="img/app.png" class="services-img" aria-hidden="true" width="300" height="146" alt="Приложения">
