--- a/catalog.html
+++ b/catalog.html
@@ -154,7 +154,7 @@
         <ul class="example-list">
           <li class="example-item">
             <div class="example-cover">
-              <h3 class="example-title"><a href="#">Sedona</a></h3>
+              <h3><a href="#" class="example-title">Sedona</a></h3>
               <p class="example-text">Информационный сайт<br>
                 для туристов</p>
               <a href="#" class="button button-primary example-button"> 9 900 ₽ </a>
@@ -163,7 +163,7 @@
           </li>
           <li class="example-item">
             <div class="example-cover">
-              <h3 class="example-title"><a href="#">Pink app</a></h3>
+              <h3><a href="#" class="example-title">Pink app</a></h3>
               <p class="example-text">Продуктовый лендинг<br>
                 приложения для iOS и Android</p>
               <a href="#" class="button button-primary example-button">9 900 ₽</a>
@@ -172,7 +172,7 @@
           </li>
           <li class="example-item">
             <div class="example-cover">
-              <h3 class="example-title"><a href="#">Barbershop</a></h3>
+              <h3><a href="#" class="example-title">Barbershop</a></h3>
               <p class="example-text">Сайт салона красоты.<br>
                 Для мужчин, да.</p>
               <a href="#" class="button button-primary example-button">9 900 ₽</a>
@@ -182,7 +182,7 @@
           </li>
           <li class="example-item">
             <div class="example-cover">
-              <h3 class="example-title"><a href="#"> Mishka</a></h3>
+              <h3><a href="#" class="example-title"> Mishka</a></h3>
               <p class="example-text">Интернет-магазин<br>
                 вязаных игрушек</p>
               <a href="#" class="button button-primary example-button">9 900 ₽</a>
@@ -192,7 +192,7 @@
           </li>
           <li class="example-item">
             <div class="example-cover">
-              <h3 class="example-title"><a href="#">A plus</a></h3>
+              <h3><a href="#" class="example-title">A plus</a></h3>
               <p class="example-text">Лендинг курсов повышения
                 квалификации</p>
               <a href="#" class="button button-primary example-button">9 900 ₽</a>
@@ -202,7 +202,7 @@
           </li>
           <li class="example-item">
             <div class="example-cover">
-              <h3 class="example-title"><a href="#">Кваст</a></h3>
+              <h3><a href="#" class="example-title">Кваст</a></h3>
               <p class="example-text">Промо-сайт производителя
                 крафтового кваса</p>
               <a href="#" class="button button-primary example-button">9 900 ₽</a>
