ДЗ: Завершаем вёрстку главной страницы. Модальное окно. Правки в каталог.

--- a/catalog.html
+++ b/catalog.html
@@ -289,14 +289,14 @@
     </button>
     <form class="form" action="https://echo.htmlacademy.ru" method="post">
       <div class="form-field">
-        <label for="name-id">Ваше имя: <input class="form-input field-input-error" type="text" name="name" id="name-id"
+        <label for="name-id">Ваше имя: <input class="form-input" type="text" name="name" id="name-id"
             placeholder="Имя Фамилия"></label>
-        <label for="email-id">Ваш e-mail: <input class="form-input field-input-error" type="email" name="email"
+        <label for="email-id">Ваш e-mail: <input class="form-input" type="email" name="email"
             id="email-id" placeholder="email@example.com"></label>
       </div>
       <div class="form-textarea">
         <label for="textarea-id">Текст письма:</label>
-        <textarea class="form-input field-input-error" name="textarea" id="textarea-id" placeholder="В свободной форме"></textarea>
+        <textarea class="form-input" name="textarea" id="textarea-id" placeholder="В свободной форме"></textarea>
       </div>
       <button type="submit" class="button button-primary modal-button">Отправить</button>
     </form>
